<!--
Author     : Sarmad Noor, Abinaya, Manasa, Jesse, Seth
Updated on : December 2,2018
Desc       : Values of all the labels and API
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">MyBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manasa</string>
    <string name="nav_header_subtitle">manasaskht@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    //login and register screen related strings

    <string name="Login_app_name">Login and SignUp ScreenDesign Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login_action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="nav_grocery">Grocery</string>
    <string name="nav_activity">Activity</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_myaccount">My Account</string>
    <string name="nav_help">Help</string>
    <string name="nav_call">Call Customer Care</string>
    <string name="nav_home">Home</string>
    <string name="nav_logout">Logout</string>
    <string name="addGrocery">Add grocery</string>
    <string name="editGrocery">Edit grocery</string>
    <string name="help">Help</string>
    <string name="lblGroceryName">Grocery Name</string>
    <string name="GroceryTextHint">Grocery Name</string>
    <string name="lblQuantity">Quantity</string>
    <string name="QuanitityHint">Quantity</string>
    <string name="lblExpiryDate">Expiry Date</string>
    <string name="btnLblSave">Save</string>
    <string name="btnLblEditSave">Save Changes</string>
    <string name="ExpiryDateHint">Select the grocery expiry date</string>

    <string name="etUpdateCalories">Enter Target Calories:</string>
    <string name="btnUpdateCalories">Update</string>
    <string name="savedSteps">savedSteps</string>
    <string name="savedCalories">savedCalories</string>
    <string name="azureApiUrl">http://mybuddy.azurewebsites.net/api/</string>
    <string name="lblBack">Cancel</string>
    <string name="unit">Unit</string>
    <string name="name">Product  :</string>
    <string name="quanity">Quantity :</string>
    <string name="expiryDate">Expires In :</string>
    <string-array name="arrUnit">
        <item>
            kg
        </item>
        <item>
            lbs
        </item>
        <item>
            ltr
        </item>
        <item>
            ml
        </item>
        <item>
            pack
        </item>
        <item>
            pc
        </item>
    </string-array>
    <string name="errorRetrievingRecipes">Error occurred while retrieving the recipe suggestions... Please try after sometime!!!</string>
    <string name="preparation">Preparation:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="sourceLink">Source:</string>
    <string name="errorQuantityNotGreaterThanZero">Quantity should be greater than zero!!!</string>
    <string name="errorEnterRequiredFields">Please enter the required fields!!!</string>
    <string name="errorNoGroceries">Please add your groceries to get relevant suggestions... Here are few recipes, you may be interested!!!</string>
    <string name="errorNoRelatedSuggestions">Sorry! We are unable to find the relevant recipes for your groceries. Here are few recipes, you may be interested!!!</string>
    <string name="loadingRecipes">Please wait while we retrieve customised suggestions for you...</string>
</resources>
