<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/groceries"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/nav_grocery"/>
        <item
            android:id="@+id/Activity"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/nav_activity"/>
        <item
            android:id="@+id/recipes"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/nav_recipes" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/nav_help"/>
        <item
            android:id="@+id/call"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/nav_call" />

    </group>


</menu>
