<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGrocery"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblGroceryName"
        android:layout_marginTop="?attr/actionBarSize"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSavedGroceryName"
        android:hint="@string/GroceryTextHint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblQuantity"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/QuanitityHint"
        android:id="@+id/txtSavedQuantity"
        android:inputType="number"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblExpiryDate"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSavedExpiryDate"
        android:focusable="false"
        android:hint="@string/ExpiryDateHint"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLblEditSave"
        android:id="@+id/btnSaveChanges"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

</LinearLayout>