<?xml version="1.0" encoding="utf-8"?>
<!--
Author   : Sarmad Noor
Description : Activity to add the new grocery items
Date     : December 1, 2018
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddGroceryActivity"
    android:orientation="vertical">
    <!-- Reference URL: https://stackoverflow.com/questions/32986588/layout-for-fragment-overlapping-toolbar -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblGroceryName"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoTxtSearchGrocery"
        android:completionThreshold="1"
        android:hint="@string/GroceryTextHint"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblQuantity"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/QuanitityHint"
                android:inputType="number"
                android:id="@+id/txtQuantity"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Units"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/units_Spinner">

            </Spinner>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblExpiryDate"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtExpiryDate"
        android:hint="@string/ExpiryDateHint"
        android:focusable="false"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLblSave"
        android:id="@+id/btnSave"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
</LinearLayout>