<?xml version="1.0" encoding="utf-8"?>
<!--
Author   : Sarmad Noor
Description : Activity to edit the added grocery items
Date     : November 1, 2018
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGroceryActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/lblGroceryName"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:textSize="20sp"-->

        <!--/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSavedGroceryName"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblQuantity"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/QuanitityHint"
                android:id="@+id/txtSavedQuantity"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unitedited_spinner">
            </Spinner>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblExpiryDate"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSavedExpiryDate"
        android:focusable="false"
        android:hint="@string/ExpiryDateHint"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLblEditSave"
        android:id="@+id/btnSaveChanges"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

</LinearLayout>