<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RecipeDetailActivity"
    tools:showIn="@layout/activity_recipe_detail"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <ImageView
                    android:id="@+id/recipeImage"
                    android:layout_width="390dp"
                    android:layout_height="390dp"
                    android:layout_gravity="center"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preparation"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:id="@+id/preparationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:id="@+id/preparation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sourceLink"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

                <TextView
                    android:id="@+id/sourceLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>